@@ -1,10 +1,15 @@
 package com.main.app.service.User;
 
+import com.main.app.Enum.Role;
+import com.main.app.dto.PaginatedResponse;
 import com.main.app.dto.User.UserDto;
 import com.main.app.model.User.User;
 import com.main.app.repository.User.UserRepository;
 import com.main.app.service.Security.CustomUserDetails;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -12,6 +17,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -51,13 +57,40 @@ public class UserService implements UserDetailsService {
         return dto;
     }
 
-    public List<UserDto> getAllUser() {
-        return userRepository.findAll().stream().map(this::convertToDTO).toList();
+    public PaginatedResponse<UserDto> getAllUsers(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<User> userPage = userRepository.findAll(pageable);
+
+        List<UserDto> userDtos = userPage.getContent().stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+
+        return new PaginatedResponse<>(
+                userDtos,
+                userPage.getNumber(),
+                userPage.getSize(),
+                userPage.getTotalElements(),
+                userPage.getTotalPages(),
+                userPage.isLast()
+        );
     }
 
-    public List<UserDto> findOnlyUsers() {
-        return userRepository.findOnlyUsers();
+    public PaginatedResponse<UserDto> findOnlyUsers(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<User> userPage = userRepository.findByUserRole(Role.USER, pageable);
 
+        List<UserDto> userDtos = userPage.getContent().stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+
+        return new PaginatedResponse<>(
+                userDtos,
+                userPage.getNumber(),
+                userPage.getSize(),
+                userPage.getTotalElements(),
+                userPage.getTotalPages(),
+                userPage.isLast()
+        );
     }
 
 }
